public/styles.css
/* Base styles */

html {
    overflow: auto;
}

body {
    margin: 0;
    padding: 0;
    min-width: 200px;
    font-family: 'Arial', sans-serif;
    color: #800303;
    background-color: white;
    overflow-x: hidden;
}

.container {
    display: flex;
    flex-direction: column;
    align-items: center;
    max-width: 600px;
    margin: 0 auto;
}

.wave {
    position: absolute;
    width: 100%;
    max-width: 600px;
}

header {
    display: flex;
    flex-direction: row;
    max-width: 600px;
    margin: 0 auto;
}

a {
    color: black;
    text-decoration: none;
}

.button {
    box-sizing: border-box;
    display: block;
    max-width: 300px;
    width: 80%;
    text-align: center;
    margin: 8px auto;
    padding: 12px 60px;
    background-color: #7d1d1e;
    border: 1px solid #7d1d1e;
    border-radius: 30px;
    color: white;
    font-size: 20px;
    transition: all 0.2s ease;
}

.button:hover {
    background-color: #ffffff;
    border: 1px solid #800303;
    border-radius: 30px;
    color: #7d1d1e;
    cursor: pointer;
}

.blur-effect {
    filter: blur(3px);
}

.double-blur-effect {
    filter: blur(6px);
}

/* Main Page */

#main-page-header {
    justify-content: flex-end;
    align-items: start;
}

#go-back {
    display: none;
    position: absolute;
    top: 0;
}

#tree-image {
    width: 100%;
    height: auto;
    display: block;
    transition: all 0.5s ease;
}

#query-results {
    position: absolute;
    top: 100px;
    margin: 0 100px;
}

#results-null {
    position: absolute;
    display: none;
    top: 130px;
    border-radius: 0px 120px;
    border: 2px solid #800303;
    width: 100px;
    padding: 20px;
    text-align: center;
    color: #800303;
}

.leaf {
    color: white;
    background-color: #7d1d1e;
    transform: translateX(50%);
    padding: 20px;
    margin-bottom: -20px;
    min-width: 80px;
    border-radius: 0px 120px;
    border: 1px solid #800303;
    text-align: center;
    transition: all 0.2s ease, opacity 0s;
}

.leaf:nth-child(even) {
    transform: translateX(-50%);
    border-radius: 120px 0px;
}

.leaf:hover {
    background-color: #ffffff;
    color: #7d1d1e;
    cursor: pointer;
}

#leaf-expanded {
    box-sizing: border-box;
    position: fixed;
    display: flex;
    flex-direction: column;
    align-items: center;
    top: 50vh;
    left: 50vw;
    transform: translate(-50%, -50%);
    width: 600px;
    max-width: 90vw;
    max-height: 90vh;
    color: #800303;
    background-color: white;
    border-radius: 30px;
    box-shadow: 0px 0px 16.5px 0px rgba(0, 0, 0, 0.25);
    margin: 0 auto;
    padding: 30px;
    word-wrap: break-word;
    cursor: default;
    overflow: scroll;
    z-index: 100;
    transition: opacity 0.2s ease;
}

#leaf-expanded-photo {
    object-fit: cover;
    margin-bottom: 20px;
    width: 100%;
    max-height: 40vh;
    border-radius: 33px;
    border: 1px solid #91101A;
}

#collapse-trigger {
    position: fixed;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background-color: transparent;
    z-index: 99;
}

#results-decoration {
    position: absolute;
    top: -40px;
    left: 50%;
    width: 2px;
    height: calc(100% + 70px);
    background-color: #9b2d2d;
}

.zoomable-area:hover {
    cursor: pointer;
}

#spinner {
    display: none;
    position: absolute;
}

.loader {
    width: 48px;
    height: 48px;
    border: 3px dotted #42210b;
    border-radius: 50%;
    position: relative;
    box-sizing: border-box;
    animation: rotation 2s linear infinite;
}

@keyframes rotation {
    0% {
        transform: rotate(0deg);
    }
    100% {
        transform: rotate(360deg);
    }
}

#tree-prompt {
    position: relative;
    color: #800303;
    text-align: center;
    font-size: 16px;
    font-style: normal;
    font-weight: 400;
    line-height: normal;
    letter-spacing: 0.8px;
    margin: 0 auto 100px;
    animation: breathe 4s ease infinite;
}

@keyframes breathe {
    0% {
        color: #800303;
    }
    50% {
        color: white;
    }
    100% {
        color: #800303;
    }
}

.hide-when-expand {
    transition: all 0.5s ease;
}

/* Story Page */

#story-page-circle {
    position: absolute;
    top: 0;
    transform: translate(0%, -37%);
    width: 100%;
    max-width: 400px;
}

#story-page-logo {
    width: 70px;
    padding: 50px;
}

#story-page-header {
    justify-content: center;
}

#story-page-quote {
    color: #d48671;
    text-align: center;
    padding: 50px;
}

#story-section {
    box-sizing: border-box;
    background-color: white;
    padding: 40px 40px 80px;
    margin-bottom: 400px;
    border: none;
    border-radius: 30px;
    box-shadow: 0px 0px 16.5px 0px rgba(0, 0, 0, 0.25);
    word-wrap: break-word;
}

#story-photo {
    margin-bottom: 40px;
    width: 100%;
    height: auto;
    display: block;
    border-radius: 33px;
    border: 1px solid #91101A;
}

/* Form Page */

.image-upload-section,
.title-input-section,
.story-input-section {
    margin: 20px 50px 20px;
    box-sizing: border-box;
}

.title-input-section input[type="text"],
.story-input-section textarea {
    width: 100%;
    padding: 18px;
    border: 1px solid #7D1D1E;
    border-radius: 12px;
    background-color: white;
    font-size: 16px;
    box-sizing: border-box;
}

.image-upload-label {
    display: block;
    padding: 40px 18px;
    border: 1px solid #7D1D1E;
    border-radius: 12px;
    background-color: white;
    text-align: center;
    cursor: pointer;
}

.story-input-section textarea {
    height: 100px;
    resize: none;
    margin-bottom: 50px;
}

/* Message Page */

.message-section {
    text-align: center;
    margin: 0 30px;
    padding: 20px;
}

